WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265187
[TextureMapper][GStreamer] Fix holepunch build by using TextureMapperFlags
https://bugs.webkit.org/show_bug.cgi?id=265187
Summary
[TextureMapper][GStreamer] Fix holepunch build by using TextureMapperFlags
Olivier Blin
Reported
2023-11-21 03:02:05 PST
Since
270051@main
, TextureMapperFlags should be used instead of the TextureMapper Flag enum. Build was broken in holepunch code.
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2023-11-21 03:03:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20781
EWS
Comment 2
2023-11-22 02:29:29 PST
Committed
271047@main
(7b8bf7b219c6): <
https://commits.webkit.org/271047@main
> Reviewed commits have been landed. Closing PR #20781 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-11-22 02:30:16 PST
<
rdar://problem/118712935
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug