[TextureMapper][GStreamer] Fix holepunch build by using TextureMapperFlags https://bugs.webkit.org/show_bug.cgi?id=265187

Reviewed by Philippe Normand.

Since 270051@main, TextureMapperFlags should be used instead of the
TextureMapper Flag enum. Build was broken in holepunch code.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::pushNextHolePunchBuffer):
* Source/WebCore/platform/graphics/holepunch/MediaPlayerPrivateHolePunch.cpp:
(WebCore::MediaPlayerPrivateHolePunch::pushNextHolePunchBuffer):

Canonical link: https://commits.webkit.org/271047@main